--- a/FillWords.Phone.8.0/Resources/AppResources.ru-RU.resx
+++ b/FillWords.Phone.8.0/Resources/AppResources.ru-RU.resx
@@ -122,11 +122,11 @@
     <comment>Controls the FlowDirection for all elements in the RootFrame. Set to the traditional direction of this resource file's language</comment>
   </data>
   <data name="ResourceLanguage" xml:space="preserve">
-    <value>en-US</value>
+    <value>ru-RU</value>
     <comment>Controls the Language and ensures that the font for all elements in the RootFrame aligns with the app's language. Set to the language code of this resource file's language.</comment>
   </data>
   <data name="ApplicationTitle" xml:space="preserve">
-    <value>FillWords</value>
+    <value>Филлворды</value>
   </data>
   <data name="AppBarButtonText" xml:space="preserve">
     <value>add</value>
@@ -135,66 +135,66 @@
     <value>Menu Item</value>
   </data>
   <data name="Estimate" xml:space="preserve">
-    <value>estimate</value>
+    <value>оценить</value>
   </data>
   <data name="EstimateMessage" xml:space="preserve">
-    <value>Do you like the game?</value>
+    <value>Вам понравилась игра?</value>
   </data>
   <data name="Exit" xml:space="preserve">
-    <value>exit</value>
+    <value>выйти</value>
   </data>
   <data name="Levels" xml:space="preserve">
-    <value>Levels</value>
+    <value>Уровни</value>
   </data>
   <data name="LogOut" xml:space="preserve">
-    <value>logout</value>
+    <value>сменить аккаунт</value>
   </data>
   <data name="Purchases" xml:space="preserve">
-    <value>purchases</value>
+    <value>покупки</value>
   </data>
   <data name="Share" xml:space="preserve">
-    <value>share</value>
+    <value>поделиться</value>
   </data>
   <data name="ShareMessage" xml:space="preserve">
-    <value>FillWords</value>
+    <value>Филлворды</value>
   </data>
   <data name="CategoryIsNotAvailable" xml:space="preserve">
-    <value>This category is not yet available for you..</value>
+    <value>Данная категория пока недоступна для Вас..</value>
   </data>
   <data name="GameCompleted" xml:space="preserve">
-    <value>Congratulations! The game finished!!!</value>
+    <value>Поздравляем! Игра завершена!!!</value>
   </data>
   <data name="DifferentPathWord" xml:space="preserve">
-    <value>Try to collect the word differently!</value>
+    <value>Попробуйте собрать это слово по-другому!</value>
   </data>
   <data name="Hints150" xml:space="preserve">
-    <value>150 hints</value>
+    <value>150 подсказок</value>
   </data>
   <data name="Hints20" xml:space="preserve">
-    <value>20 hints</value>
+    <value>20 подсказок</value>
   </data>
   <data name="Hints40" xml:space="preserve">
-    <value>40 hints</value>
+    <value>40 подсказок</value>
   </data>
   <data name="Hints80" xml:space="preserve">
-    <value>80 hints</value>
+    <value>80 подсказок</value>
   </data>
   <data name="HintsAll" xml:space="preserve">
-    <value>Lots of hints</value>
+    <value>Куча подсказок</value>
   </data>
   <data name="PlusRemoveAds" xml:space="preserve">
-    <value>+ removing ads</value>
+    <value>+ отключение рекламы</value>
   </data>
   <data name="NoInternet" xml:space="preserve">
-    <value>Please check the connection to the Internet!</value>
+    <value>Пожалуйста, проверьте подключение к сети Интернет!</value>
   </data>
   <data name="ProductExitsts" xml:space="preserve">
-    <value>You have already bought this product!</value>
-  </data>
-  <data name="PurchaseError" xml:space="preserve">
-    <value>Error when buying the product: </value>
+    <value>Вы уже приобрели данный продукт!</value>
   </data>
   <data name="ThankYouForPurchase" xml:space="preserve">
-    <value>Thank you for your purchase!</value>
+    <value>Спасибо за покупку!</value>
+  </data>
+  <data name="PurchaseError" xml:space="preserve">
+    <value>Ошибка при покупке продукта: </value>
   </data>
 </root>
