--- a/FillWords.Phone.8.0/Resources/AppResources.resx
+++ b/FillWords.Phone.8.0/Resources/AppResources.resx
@@ -197,4 +197,7 @@
   <data name="ThankYouForPurchase" xml:space="preserve">
     <value>Thank you for your purchase!</value>
   </data>
+  <data name="RemoveAds" xml:space="preserve">
+    <value>remove ads</value>
+  </data>
 </root>
