--- a/FillWords.Phone.8.0/Resources/AppResources.ru-RU.resx
+++ b/FillWords.Phone.8.0/Resources/AppResources.ru-RU.resx
@@ -200,4 +200,10 @@
   <data name="RemoveAds" xml:space="preserve">
     <value>удалить рекламу</value>
   </data>
+  <data name="AdsTitleMessage" xml:space="preserve">
+    <value>Хотите попробовать нашу новую игру?</value>
+  </data>
+  <data name="AllGames" xml:space="preserve">
+    <value>еще игры</value>
+  </data>
 </root>
