--- a/FillWords.Phone.7.1/Resources/AppResources.resx
+++ b/FillWords.Phone.7.1/Resources/AppResources.resx
@@ -197,4 +197,13 @@
   <data name="ThankYouForPurchase" xml:space="preserve">
     <value>Thank you for your purchase!</value>
   </data>
+  <data name="AdsTitleMessage" xml:space="preserve">
+    <value>Do you want to try our new game?</value>
+  </data>
+  <data name="AllGames" xml:space="preserve">
+    <value>more games</value>
+  </data>
+  <data name="RemoveAds" xml:space="preserve">
+    <value>remove ads</value>
+  </data>
 </root>
